2019-05-17  Karl Berry  <karl@tug.org>

	* tb124 released, tb123 public.

2019-05-17  Karl Berry  <karl@freefriends.org>

	* lists-unifications.txt (Fahmy): add initials.
	
	* tb18capsule.txt (Koren): page 101.

2019-01-26  Karl Berry  <karl@freefriends.org>

	* capin.pl (parse_one_capsule): check for pageno not a range.
	* many capsule files: add ranges, as with
	perl -pi -e 's/\{1\}$/{1-1}/' tb01capsule.txt 

2019-01-18  Karl Berry  <karl@freefriends.org>

	* capdata-rx.pl (lists_regexps): count regexps used.
	(rx_dump_count): output unused regexps.
	* capaccum.pl (accumulation_check): call it.
	* lists-regexps.txt: remove unused, and used only once.
	* tb{85,105,119}capsule.txt: regularize usage.

2019-01-17  Karl Berry  <karl@freefriends.org>

	* capdata-unify.pl (lists_unify): count unifications used.
	(unify_dump_count): output unused unifications.
	* capaccum.pl (accumulation_check): call it.
	* lists-unifications.txt: remove unused unifications.

2019-01-13  Karl Berry  <karl@freefriends.org>

	* capdata-xlate.pl (xlate_dump_count): try and reject showing
	unused html->txt translations, since there are lots; distinguish
	tex->html from html->txt.
	* lists-regexps.txt (\smc),
	* lists-translations.txt (\SMC, many more): remove
	some of the translations used only once, for speedup (minor)
	and cleanliness (also minor).
	* tb<many>capsule.txt: adjust to use \acro and other commonalities.

2019-01-11  Karl Berry  <karl@freefriends.org>

	* article-2011.ltx,
	* article-2019.ltx: add TUGboat article sources past and present.

2019-01-10  Karl Berry  <karl@freefriends.org>

	* tb31capsule.txt: don't use \aand for review authors,
	so we can drop the translations entry.
	* lists-translations.txt (Bencze, \`\i , \aand, \and, \cand):
	drop unused entries.
	* capaccule.pl (accumulation_check): reenable xlate_dump_count.

2019-01-09  Karl Berry  <karl@freefriends.org>

	* capaccum.pl (accumulation): record all categories and difficulties.